--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Compras.com_orden_aprobacion_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 
 @{
     ViewBag.Title = "Aprobación orden de compra";
@@ -24,14 +24,6 @@
         selectedIDs = values.join(',');
     };
 
-    function ocultar_mostrar_div() {
-        var d = $("#MotivoAprobacion").val();
-        if (d == "MotivoAprobacion") {
-            $("#mostrar_aprobacion").hide();
-        } else {
-            $("#mostrar_reprobacion").show();
-        }
-    }
 
 
     </script>
@@ -127,32 +119,10 @@
         <div class="box-body">
             @Html.Action("GridViewPartial_aprobacion_oc", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12" id="mostrar_aprobacion">
-                        <div class="form-group">
-                            <label for="MotivoAprobacion">Motivo aprobación</label>
-                            @Html.TextBoxFor(q => q.MotivoAprobacion, new { @class = "form-control", @id = "MotivoAprobacion" })
-                            @Html.ValidationMessageFor(q => q.MotivoAprobacion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12" id="mostrar_reprobacion">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="MotivoReprobacion">Motivo reprobación</label>
-                            @Html.TextBoxFor(q => q.MotivoReprobacion, new { @class = "form-control", @id = "MotivoReprobacion" })
-                            @Html.ValidationMessageFor(q => q.MotivoReprobacion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
 
                     <div class="box-footer">
-                        <button type="button" class="btn btn-primary" onclick="AddFacturas();">Aprobar</button>
-                        <button type="button" class="btn btn-primary" onclick="AddFacturas();">Reprobar</button>
+                        <button type="button" class="btn btn-default" id="btn_aprobar" estado="APRO" onclick="aprobar();">Aprobar</button>
+                        <button type="button" class="btn btn-primary" id="btn_rechazar" estado="REPRO" onclick="rechazar();">Rechazar</button>
                     </div>
 
                 </div>
