--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -412,17 +412,18 @@
 
             <div role="tabpanel" class="tab-pane" id="tb_info_nomina">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdTipoEmpleado">Tipo empleado</label>
-                            @Html.DropDownListFor(q => q.IdTipoEmpleado, new SelectList(ViewBag.lst_tipo_empleado, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdTipoEmpleado, "", new { @class = "text-danger" })
+                    <div class="col-md-12">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTipoEmpleado">Tipo empleado</label>
+                                @Html.DropDownListFor(q => q.IdTipoEmpleado, new SelectList(ViewBag.lst_tipo_empleado, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.IdTipoEmpleado, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="IdHorario">Horario</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdHorario, settings =>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="IdHorario">Horario</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.IdHorario, settings =>
                                {
                                    settings.Name = "IdHorario";
                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
@@ -439,24 +440,24 @@
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_horario).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdHorario, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.IdHorario, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="CodigoSectorial">Código sectorial</label>
-                            @Html.TextBoxFor(q => q.CodigoSectorial, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.CodigoSectorial, "", new { @class = "text-danger" })
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="CodigoSectorial">Código sectorial</label>
+                                @Html.TextBoxFor(q => q.CodigoSectorial, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.CodigoSectorial, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="em_fechaIngaRol">Fecha ingreso*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.DevExpress().DateEditFor(q => q.em_fechaIngaRol, settings =>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="em_fechaIngaRol">Fecha ingreso*</label>
+                                <div class="input-group date">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-calendar"></i>
+                                    </div>
+                                    @Html.DevExpress().DateEditFor(q => q.em_fechaIngaRol, settings =>
                            {
                                settings.Name = "em_fechaIngaRol";
                                settings.Properties.UseMaskBehavior = true;
@@ -465,18 +466,18 @@
                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.em_fechaIngaRol, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(q => q.em_fechaIngaRol, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="em_fechaSalida">Fecha salida</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.DevExpress().DateEditFor(q => q.em_fechaSalida, settings =>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="em_fechaSalida">Fecha salida</label>
+                                <div class="input-group date">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-calendar"></i>
+                                    </div>
+                                    @Html.DevExpress().DateEditFor(q => q.em_fechaSalida, settings =>
                            {
                                settings.Name = "em_fechaSalida";
                                settings.Properties.UseMaskBehavior = true;
@@ -485,96 +486,101 @@
                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.em_fechaSalida, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(q => q.em_fechaSalida, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <div class="row">
 
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Valor_horas">Valor hora vespertina</label>
-                            @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Valor_horas">Valor hora matutina</label>
-                            @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Valor_horas">Valor hora nocturnas</label>
-                            @Html.TextBoxFor(q => q.Valor_horas_nocturna, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.Valor_horas_nocturna, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+                <div class="row" id="horas">
+                    <div class="col-md-12">
 
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Valor_maximo_horas">Valor máximo de horas</label>
-                            @Html.TextBoxFor(q => q.Valor_maximo_horas, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.Valor_maximo_horas, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Marca_Biometrico"></label>
-                            @Html.DevExpress().CheckBoxFor(q => q.Marca_Biometrico, settings =>
-                            {
-                                settings.Name = "Marca_Biometrico";
-                                settings.Text = "Marca biometrico";
-
-                            }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.Marca_Biometrico, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="es_AcreditaHorasExtras"></label>
-                            @Html.DevExpress().CheckBoxFor(q => q.es_AcreditaHorasExtras, settings =>
-                           {
-                               settings.Name = "es_AcreditaHorasExtras";
-                               settings.Text = "Goza horas extras";
-
-                           }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.es_AcreditaHorasExtras, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="es_AcreditaHorasExtras"></label>
-                            @Html.DevExpress().CheckBoxFor(q => q.Tiene_ingresos_compartidos, settings =>
-                           {
-                               settings.Name = "Tiene_ingresos_compartidos";
-                               settings.Text = "Tiene ingresos compartidos";
-
-                           }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.Tiene_ingresos_compartidos, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="Pago_por_horas"></label>
-                            @Html.DevExpress().CheckBoxFor(q => q.Pago_por_horas, settings =>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Pago_por_horas"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Pago_por_horas, settings =>
                            {
                                settings.Name = "Pago_por_horas";
                                settings.Text = "Pago por horas";
 
                            }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.Pago_por_horas, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.Pago_por_horas, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Valor_horas">Valor hora vespertina</label>
+                                @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Valor_horas">Valor hora matutina</label>
+                                @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Valor_horas">Valor hora nocturnas</label>
+                                @Html.TextBoxFor(q => q.Valor_horas_nocturna, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Valor_horas_nocturna, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Valor_maximo_horas">Valor máximo de horas</label>
+                                @Html.TextBoxFor(q => q.Valor_maximo_horas, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Valor_maximo_horas, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="es_AcreditaHorasExtras"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.es_AcreditaHorasExtras, settings =>
+                           {
+                               settings.Name = "es_AcreditaHorasExtras";
+                               settings.Text = "Goza horas extras";
 
+                           }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.es_AcreditaHorasExtras, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Marca_Biometrico"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Marca_Biometrico, settings =>
+                            {
+                                settings.Name = "Marca_Biometrico";
+                                settings.Text = "Marca biometrico";
+
+                            }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Marca_Biometrico, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="es_AcreditaHorasExtras"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Tiene_ingresos_compartidos, settings =>
+                           {
+                               settings.Name = "Tiene_ingresos_compartidos";
+                               settings.Text = "Tiene ingresos compartidos";
+
+                           }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Tiene_ingresos_compartidos, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_info_adicional">
