--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Importar.cshtml
@@ -3,44 +3,96 @@
     ViewBag.Title = "Importar plan de cuentas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
+    function OnFileUploadStart(s, e) {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ActualizarVariablesSession", "PlanDeCuentas",new { Area = "Contabilidad"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });        
+    }
+
     function OnFileUploadComplete(s, e)
     {
-        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
-        e.customArgs['Empresa'] = $('#IdEmpresa').val();
         GridView_plancta_importacion.PerformCallback();
-    }    
+    }
 </script>
-@using (Html.BeginForm())
+
+@using (Html.BeginForm("Importar","PlanDeCuentas",FormMethod.Post,new { @role = "form", @id = "form"}))
 {
     @Html.HiddenFor(q=> q.IdEmpresa, new { @id = "IdEmpresa"})
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 @Html.DevExpress().UploadControl(settings =>
            {
                settings.Name = "UploadControlFile";
                settings.CallbackRouteValues = new { Controller = "PlanDeCuentas", Action = "UploadControlUpload" };
                settings.ShowUploadButton = true;
                settings.ShowProgressPanel = true;
+               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                settings.NullText = "Selecciona el archivo...";
+               settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
                settings.ClientSideEvents.FileUploadComplete = "OnFileUploadComplete";
            }).GetHtml()
+            </div>
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-primary" title="Guardar">Guardar</button>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="detalle">Plan de cuentas</label>
-                    @Html.Action("GridViewPartial_plancta_importacion")
+
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_por_aprobar" aria-controls="vales" role="tab" data-toggle="tab">Plan de cuentas</a>
+            </li>
+            <li>
+                <a href="#tab_aprobados" aria-controls="vales" role="tab" data-toggle="tab">Años fiscales</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_por_aprobar">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            @Html.Action("GridViewPartial_plancta_importacion")
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_aprobados">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            @Html.Action("GridViewPartial_plancta_importacion")
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
