--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas.cshtml
@@ -64,14 +64,13 @@
             {
                 if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "EstadoBool")) == true)
                 {
+
                     ViewContext.Writer.Write(
+                Html.ActionLink("Duplicar", "Duplicar", new { IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") }) + "&nbsp;" +
                         Html.ActionLink("Anular", "Anular", new { IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
-                    ViewContext.Writer.Write(
-                       Html.ActionLink("Anular", "Diplicar", new { IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") },
-                           new { onclick = "return confirm('¿Está seguro de que desea duplicar el registro?')" })
-                   );
+
                 }
             });
             c.SetHeaderTemplateContent(tc =>
@@ -90,14 +89,14 @@
         {
             column.FieldName = "FechaCarga";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(8);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
 
-        settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(8);
-        settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(30);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(60);
+        settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(15);
+        settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(15);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(40);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
