--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/_GridViewPartial_activo_fijo_ctacble.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/_GridViewPartial_activo_fijo_ctacble.cshtml
@@ -33,24 +33,23 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdCatalogo"] = "";
             e.NewValues["IdCtaCble"] = "";
             e.NewValues["Porcentaje"] = 0;
         };
         settings.Columns.Add(column =>
         {
-            column.Name = "IdCatalogo";
-            column.FieldName = "IdCatalogo";
-            column.Caption = "Tipo de cuenta*";
+            column.Name = "IdDepartamento";
+            column.FieldName = "IdDepartamento";
+            column.Caption = "Departamento*";
             column.Width = Unit.Percentage(40);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(100);
                 p.TextField = "Descripcion";
-                p.ValueField = "IdCatalogo";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_catalogo;
+                p.ValueField = "IdDepartamento";
+                p.ValueType = typeof(decimal);
+                p.DataSource = ViewBag.lst_departamento;
             });
         });
         settings.Columns.Add(column =>
